--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,11 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.android.support:percent:26.0.0-alpha1'
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
-
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
     compile 'com.google.code.gson:gson:2.8.1'
+
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
 
 }
