--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,5 +35,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.8.1'
 
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
 }
